# POCO-Server

./: CMakeLists.txt  all.cpp  build.sh  main.cpp  run.sh
config/: config.cpp  config.h  config.hpp
database/: CMakeLists.txt  database.cpp  database.hpp  package.cpp  report.cpp  report.hpp
database/config/: config.cpp
server/: http_request_factory.h  http_request_factory.hpp  http_server.hpp
server/handlers/: report_handler.hpp  rukovoditel_handler.hpp
service/: CMakeLists.txt  report_service.cpp  report_service.hpp
util/: CMakeLists.txt  strings.cpp  strings.hpp
